# de_electricity_meteo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: 01_electricity.py  01_odre_registre_national_installations.py  02_contours_iris.py  03_meteo_france_info_stations.py  04_meteo_france_observations.py  05_meteo_france_climatologie.py  eco2mix.py  registre_installations_production_et_stockage_electricite.py  registre_installations_production_et_stockage_electricite_2024.py
src/de_electricity_meteo/: downloader.py  enums.py  exceptions.py  logger.py
src/de_electricity_meteo/config/: data_catalog.yaml  logger.yaml  paths.py  settings.py
src/de_electricity_meteo/core/: __init__.py  downloader.py  enums.py  logger.py
src/de_electricity_meteo/database/: connection.py
src/de_electricity_meteo/electricity/: extract.py  odre_eco2mix.py  odre_registre.py  odre_registre_national.py
src/de_electricity_meteo/geography/: admin_express_cog.py  contours_iris.py  iris.py
src/de_electricity_meteo/meteo/: climatologie.py  exploration.py  handle_api_params_example.py  stations.py
tests/: test_downloader.py  test_logger.py
