[project]
name = "de-electricity-meteo"
version = "2025.12"
description = "Data Engineering personnal project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "duckdb>=1.4.3",
    "marimo[recommended]>=0.18.4",
    "polars>=1.36.1",
    "psycopg[binary]>=3.3.2",
    "py7zr>=1.1.0",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.ruff]
#src = ["src", "tests"]
line-length = 100
include = [
    "src/**/*.py",
    "tests/**/*.py"
]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "I", # isort
    "E", "W", # pycodestyle,
    "F", # pyflakes
    "PL", # pylint
    "D", # pydocstyle
    "NPY", # numpy
]
ignore = ["D100", "D101", "D104"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = ["src", "tests"]
exclude = ["notebooks"]

[tool.marimo.runtime]
pythonpath = ["src"]    # needed to use absolute imports inside notebooks

[tool.pytest.ini_options]
addopts = "--cov=de_electricity_meteo --cov-report=term-missing --cov-report=html:tests/htmlcov"
pythonpath = ["src"]
#testpaths = ["tests"]

[tool.coverage.run]
branch = true   # check if all branches of if/else statement are used
data_file = "tests/.coverage"
#source = ["de_electricity_meteo"]

[tool.coverage.report]
#fail_under = 90
show_missing = true
exclude_also = [
    'if __name__ == .__main__.:'
]
